# testgen

./: .gitignore  pyproject.toml  run.py
generated_tests/sample/: test_sample_add.cpp
src/testgen/analysis/: parser.py
src/testgen/config/: __init__.py  loader.py  models.py
src/testgen/core/: runner.py
src/testgen/domain/: __init__.py  models.py
src/testgen/generation/: generator.py
src/testgen/llm/: client.py
src/testgen/output/: writer.py
src/testgen/postprocess/: processor.py
tests/: conftest.py
tests/unit/: test_parser.py
